--- a/index.html
+++ b/index.html
@@ -1,27 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <title>MineSweeper</title>
+    <script src="./dest/build.js"></script>
+    <style>
+      .cell[data-mine-num="-1"]{
+        color: #FAFAFA;
+        background-color: #E64A19;
+      }
+      .cell[data-mine-num="1"]{
+        color: #1976D2;
+      }
+      .cell[data-mine-num="2"]{
+        color: #388E3C;
+      }
+      .cell[data-mine-num="3"]{
+        color: #d32f2f;
+      }
+      .cell[data-mine-num="4"]{
+        color: #283593;
+      }
+      .cell[data-mine-num="5"]{
+        color: #5D4037;
+      }
+      .cell[data-mine-num="6"]{
+        color: #0097A7;
+      }
+      .cell[data-mine-num="7"]{
+        color: #7B1FA2;
+      }
+      .cell[data-mine-num="8"]{
+        color: #212121;
+      }
+      body{
+        margin: 0;
+        padding: 0;
+        background-color: #EEEEEE;
+      }
+      .fieldContainer{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        height: 80%;
+        background-color: #FAFAFA;
+        box-shadow: 0 0 2px rgba(0,0,0,.7),0 2px 4px rgba(0,0,0,.14);
+      }
+      .field{
+        position: absolute;
+        margin: auto;
+        width: 100%;
+        height: 100%;
+        border-collapse: collapse;
+        text-align: center;
+        font-family: "游ゴシック", YuGothic, "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "ＭＳ ゴシック", sans-serif;
+        font-size: 1.6em;
+        font-weight: bold;
+        table-layout: fixed;
+      }
+      .cell{
+        color: #757575;
+        border: 1px solid #EEEEEE;
+      } 
+    </style>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>MineSweeper</title>
-  <script src="./dest/build.js"></script>
-  <style>
-    .field{
-      border-collapse: collapse;
-      text-align: center;
-    }
-    .cell{
-      height: 20px;
-      width: 20px;
-      border: 1px solid black;
-    } 
-  </style>
-</head>
-
-<body>
-  <div id="mineSweeperContainer">
-    <div class="fieldContainer"></div>
-  </div>
-</body>
+  <body>
+    <div id="mineSweeperContainer">
+      <div class="fieldContainer"></div>
+    </div>
+  </body>
 
 </html>
