--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <title>MineSweeper</title>
     <script src="./dest/build.js"></script>
     <style>
+      .timer{
+        position: absolute;
+        left: 50%;
+        top: 0%;
+        margin-top: 0.2em;
+        width: 200px;
+        height: 1.4em;
+        font-size: 1.4em;
+        color: #FAFAFA;
+        text-align: center;
+        transform: translateX(-50%);
+      }
       .field[data-mine-status="CLEARED"] .cell[data-mine-isopened="false"]{
         color: #FAFAFA;
         background-color: #00E676;
@@ -50,6 +62,7 @@
         padding: 0;
         background-color: #78909C;
         user-select: none;
+        font-family: "游ゴシック", YuGothic, "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "ＭＳ ゴシック", sans-serif;
         -moz-user-select: none;
         -webkit-user-select: none;
         -ms-user-select: none;
@@ -70,7 +83,6 @@
         height: 100%;
         border-collapse: collapse;
         text-align: center;
-        font-family: "游ゴシック", YuGothic, "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "ＭＳ ゴシック", sans-serif;
         font-size: 1.2em;
         font-weight: bold;
         table-layout: fixed;
@@ -81,11 +93,16 @@
         color: #757575;
         border: 1px solid #E0E0E0;
       } 
+      .cell>div{
+        height: 1.4em;
+        overflow: hidden;
+      }
     </style>
   </head>
 
   <body>
     <div id="mineSweeperContainer">
+      <div class="timerContainer"></div>
       <div class="fieldContainer"></div>
     </div>
   </body>
